--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
  <center>
   <H3>Start 버튼을 눌러 피아노를 시작해보세요.</H3><br />
 
-  <form method=get action="cgi-bin/SSCL.py">
+  <form method=get action="cgi-bin/distance.py">
   저장 버튼을 누를 시, 목록에서 저장된 파일이 보여집니다.<br />
   정지 버튼을 눌러도 저장되지 않습니다.<br /><br /><br />
    <input type="submit" name="Tstart" value="Start">
